--- a/frontend/src/app/componets/template/header/header.component.html
+++ b/frontend/src/app/componets/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z4">
+<mat-toolbar class="header">
     <span>
       <a>
         <img class="logo" src="/assets/img/white-wolf-menu-icon.png" alt="logo">
