Criacao do component de persoagens e ajuste de rotas

--- a/frontend/src/app/componets/template/header/header.component.html
+++ b/frontend/src/app/componets/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header">
     <span>
-      <a>
+      <a routerLink="/home">
         <img class="logo" src="/assets/img/white-wolf-menu-icon.png" alt="logo">
       </a>
     </span>
