Criacao do component para incluir personagens

--- a/frontend/src/app/componets/template/nav/nav.component.html
+++ b/frontend/src/app/componets/template/nav/nav.component.html
@@ -13,13 +13,13 @@
         </i>
         Personagens
       </a>
-      <a mat-list-item>
+      <a mat-list-item routerLink="/monsters">
         <i class="material-icons">
           pest_control_rodent
         </i>
         Monstros
       </a>
-      <a mat-list-item>
+      <a mat-list-item routerLink="/maps">
         <i class="material-icons">
           public
         </i>
