Adicionando model de personagem

--- a/frontend/src/app/componets/template/nav/nav.component.html
+++ b/frontend/src/app/componets/template/nav/nav.component.html
@@ -5,25 +5,25 @@
         <i class="material-icons">
           home
         </i>
-        Início
+        Home
       </a>
       <a mat-list-item routerLink="/characters">
         <i class="material-icons">
           person
         </i>
-        Personagens
+        Characters
       </a>
       <a mat-list-item routerLink="/monsters">
         <i class="material-icons">
           pest_control_rodent
         </i>
-        Monstros
+        Monsters
       </a>
       <a mat-list-item routerLink="/maps">
         <i class="material-icons">
           public
         </i>
-        Sobre o universo
+        World
       </a>
     </mat-nav-list>
   </mat-sidenav>
