testando o snack bar

--- a/frontend/src/app/views/character-crud/character-create/character-create.component.html
+++ b/frontend/src/app/views/character-crud/character-create/character-create.component.html
@@ -1,2 +1,2 @@
-<p>character-create works!</p>
-<button routerLink="/characters">Back</button>
+<button mat-raised-button color="primary" (click)="save()">Save</button>
+<button mat-raised-button color="default" (click)="back()">Return</button>
