Criando form com ngModel

--- a/frontend/src/app/views/character-crud/character-create/character-create.component.html
+++ b/frontend/src/app/views/character-crud/character-create/character-create.component.html
@@ -1,2 +1,13 @@
-<button mat-raised-button color="primary" (click)="save()">Save</button>
-<button mat-raised-button color="default" (click)="back()">Return</button>
+<mat-card>
+  <mat-card-title>Create New Character</mat-card-title>
+  <form class="form-style">
+    <mat-form-field>
+      <input matInput placeholder="Name" [(ngModel)]="character.name" name="name"/>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Age" [(ngModel)]="character.age" name="age"/>
+    </mat-form-field>
+  </form>
+  <button class="form-button" mat-raised-button color="primary" (click)="create()">Save</button>
+  <button class="form-button" mat-raised-button color="default" (click)="back()">Return</button>
+</mat-card>
