Criacao de tabela basica

--- a/frontend/src/app/views/character-crud/character-crud.component.html
+++ b/frontend/src/app/views/character-crud/character-crud.component.html
@@ -1,2 +1,2 @@
-<p>character-crud works!</p>
 <button mat-raised-button (click)="CreateCharacter()">Create</button>
+<app-character-view></app-character-view>
