criando a logica de update

--- a/frontend/src/app/componets/character/character-update/character-update.component.html
+++ b/frontend/src/app/componets/character/character-update/character-update.component.html
@@ -1,1 +1,13 @@
-<p>character-update works!</p>
+<mat-card>
+  <mat-card-title>Update Character</mat-card-title>
+  <form class="form-style">
+    <mat-form-field>
+      <input matInput placeholder="Name" [(ngModel)]="character.name" name="name"/>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Age" [(ngModel)]="character.age" name="age"/>
+    </mat-form-field>
+  </form>
+  <button class="form-button" mat-raised-button color="primary" (click)="update()">Save</button>
+  <button class="form-button" mat-raised-button color="warn" (click)="cancel()">Return</button>
+</mat-card>
