--- a/frontend/src/app/componets/template/footer/footer.component.html
+++ b/frontend/src/app/componets/template/footer/footer.component.html
@@ -3,7 +3,7 @@
     <i class="material-icons blue-icon center">
       local_fire_department
     </i>
-    <span class="text-negrito">Leorfk</span>
+    <span><a class="text-negrito" href="https://github.com/Leorfk">Leorfk</a></span>
     <i class="material-icons blue-icon center">
       local_fire_department
     </i>
