Criacao da logica de delete

--- a/frontend/src/app/componets/character/character-update/character-update.component.html
+++ b/frontend/src/app/componets/character/character-update/character-update.component.html
@@ -8,6 +8,6 @@
       <input matInput placeholder="Age" [(ngModel)]="character.age" name="age"/>
     </mat-form-field>
   </form>
-  <button class="form-button" mat-raised-button color="primary" (click)="update()">Save</button>
+  <button class="form-button" mat-raised-button color="primary" (click)="update()">Update</button>
   <button class="form-button" mat-raised-button color="warn" (click)="cancel()">Return</button>
 </mat-card>
