adicionando mensagem de erros

--- a/frontend/src/app/componets/character/character-delete/character-delete.component.html
+++ b/frontend/src/app/componets/character/character-delete/character-delete.component.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <mat-card-title>Update Character</mat-card-title>
+  <mat-card-title>Delete Character</mat-card-title>
   <form class="form-style">
     <mat-form-field>
-      <input matInput placeholder="Name" [(ngModel)]="character.name" name="name" disabled/>
+      <input matInput placeholder="Name" [value]="character.name" name="name" disabled/>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Age" [(ngModel)]="character.age" name="age" disabled/>
+      <input matInput placeholder="Age" [value]="character.age" name="age" disabled/>
     </mat-form-field>
   </form>
   <button class="form-button" mat-raised-button color="warn" (click)="delete()">Delete</button>
