--- a/frontend/src/app/componets/template/header/header.component.css
+++ b/frontend/src/app/componets/template/header/header.component.css
@@ -11,12 +11,14 @@
 .header .logo {
   max-height: 70px;
 }
-.title-group{
-  color: rgb(182, 52, 0);
-}
+
 .header .title-group{
   padding-left: 15px;
 }
 .header .title-group{
   padding-right: 15px;
+}
+
+.link-header {
+  color: gray;
 }
