--- a/frontend/src/app/componets/template/header/header.component.html
+++ b/frontend/src/app/componets/template/header/header.component.html
@@ -5,11 +5,11 @@
       </a>
     </span>
     <span class="title-group">
-      <a>
+      <a class="link-header" routerLink="{{ routeUrl }}">
         <i class="material-icons">
-          home
+          {{ icon }}
         </i>
-        [Titulo vem aqui]
+        {{ title }}
       </a>
     </span>
 </mat-toolbar>
