--- a/frontend/src/app/componets/character/character-view/character-view.component.html
+++ b/frontend/src/app/componets/character/character-view/character-view.component.html
@@ -1,35 +1,5 @@
-<table mat-table class="mat-elevation-z8" [dataSource]="characters">
-
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="age">
-    <th mat-header-cell *matHeaderCellDef>Age</th>
-    <td mat-cell *matCellDef="let row">{{ row.age }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="aliases">
-    <th mat-header-cell *matHeaderCellDef>Aliases</th>
-    <td mat-cell *matCellDef="let row">{{ row.aliases }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
-    <td mat-cell *matCellDef="let row">
-      <a routerLink="/characters/details/{{row.id}}">
-        <i class="material-icons view">person</i>
-      </a>
-      <a routerLink="/characters/edit/{{row.id}}">
-        <i class="material-icons edit">edit</i>
-      </a>
-      <a routerLink="/characters/delete/{{row.id}}">
-        <i class="material-icons delete">delete</i>
-      </a>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+<app-table
+  [characters]="characters"
+  [displayedColumns]="displayedColumns"
+  [routes]="routes"
+></app-table>
