--- a/frontend/src/app/componets/util/table/table.component.css
+++ b/frontend/src/app/componets/util/table/table.component.css
@@ -1,10 +1,7 @@
-.mat-table {
+.mat-table, mat-header-cell, mat-cell {
+  overflow: auto;
   width: 100%;
-}
-
-.mat-header-cell {
-  background-color: gray;
-  border-color: red;
+  max-height: 30rem;
 }
 
 .view {
