--- a/frontend/src/app/componets/util/table/table.component.html
+++ b/frontend/src/app/componets/util/table/table.component.html
@@ -1,20 +1,19 @@
-<table mat-table class="mat-elevation-z8" [dataSource]="characters">
-  <div *ngFor="let item of displayedColumns | slice: 1; let i = index">
-    <ng-container matColumnDef="{{ item }}">
-      <th mat-header-cell *matHeaderCellDef>{{ displayedColumns[i] }}</th>
-      <td mat-cell *matCellDef="let row">{{ row[item] }}</td>
-    </ng-container>
-  </div>
+<mat-table mat-table class="mat-elevation-z8" [dataSource]="characters">
+
+  <ng-container *ngFor="let item of displayedColumns | slice: 1; let i = index" matColumnDef="{{ item }}">
+    <mat-header-cell *matHeaderCellDef> {{ displayedColumns[i] }} </mat-header-cell>
+    <mat-cell *matCellDef="let row"> {{ row[item] }} </mat-cell>
+  </ng-container>
 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
-    <td mat-cell *matCellDef="let row">
+    <mat-header-cell mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+    <mat-cell mat-cell *matCellDef="let row">
       <a *ngFor="let item of routes" routerLink="{{ item.link }}{{ row.id }}">
         <i class="{{ item.class }}">{{ item.icon }}</i>
       </a>
-    </td>
+    </mat-cell>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+  <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
