Refatoracao do componet da tabela

--- a/frontend/src/app/componets/character/character-view/character-view.component.html
+++ b/frontend/src/app/componets/character/character-view/character-view.component.html
@@ -1,5 +1,5 @@
 <app-table
-  [characters]="characters"
+  [dataSource]="characters"
   [displayedColumns]="displayedColumns"
   [routes]="routes"
 ></app-table>
