nova altercao no component da tabela fazendo ngfor separando o ultimo item

--- a/frontend/src/app/componets/util/table/table.component.html
+++ b/frontend/src/app/componets/util/table/table.component.html
@@ -1,19 +1,26 @@
 <mat-table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
-  <ng-container *ngFor="let item of displayedColumns.columns |
-      slice:0:displayedColumns.columns.length-1; let i = index" matColumnDef="{{ item }}">
-    <mat-header-cell *matHeaderCellDef> {{ displayedColumns.columnsName[i+1] }} </mat-header-cell>
-    <mat-cell *matCellDef="let row"> {{ row[item] }} </mat-cell>
-  </ng-container>
+  <div *ngFor="let item of displayedColumns.columns;last as action; let i = index">
+    <div *ngIf="!action;else lastItem">
+      <ng-container matColumnDef="{{ item }}">
+        <mat-header-cell *matHeaderCellDef> {{ displayedColumns.columnsName[i] }} </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{ row[item] }} </mat-cell>
+      </ng-container>
+    </div>
 
-  <ng-container matColumnDef="{{ displayedColumns.columns[displayedColumns.columns.length-1] }}">
-    <mat-header-cell mat-header-cell *matHeaderCellDef>{{ displayedColumns.columnsName[displayedColumns.columnsName.length-1] }}s</mat-header-cell>
-    <mat-cell mat-cell *matCellDef="let row">
-      <a *ngFor="let item of routes" routerLink="{{ item.link }}{{ row.id }}">
-        <i class="{{ item.class }}">{{ item.icon }}</i>
-      </a>
-    </mat-cell>
-  </ng-container>
+    <ng-template #lastItem>
+      <ng-container matColumnDef="{{ displayedColumns.columns[i] }}">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>
+          {{ displayedColumns.columnsName[i] }}</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let row">
+          <a *ngFor="let item of routes" routerLink="{{ item.link }}{{ row.id }}">
+            <i class="{{ item.class }}">{{ item.icon }}</i>
+          </a>
+        </mat-cell>
+      </ng-container>
+
+    </ng-template>
+  </div>
 
   <mat-header-row *matHeaderRowDef="displayedColumns.columns; sticky: true"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns.columns;"></mat-row>
