--- a/frontend/src/app/views/character-crud/character-crud.component.html
+++ b/frontend/src/app/views/character-crud/character-crud.component.html
@@ -1,2 +1,2 @@
-<button mat-raised-button (click)="CreateCharacter()">Create</button>
+<button mat-raised-button class="button-create" (click)="CreateCharacter()">Create</button>
 <app-character-view></app-character-view>
