Adicao de component de input

--- a/frontend/src/app/componets/character/character-create/character-create.component.html
+++ b/frontend/src/app/componets/character/character-create/character-create.component.html
@@ -9,5 +9,5 @@
     </mat-form-field>
   </form>
   <button class="form-button" mat-raised-button color="primary" (click)="create()">Save</button>
-  <button class="form-button" mat-raised-button color="warn" (click)="back()">Return</button>
+  <button class="form-button" mat-raised-button color="warn" (click)="goback()">Return</button>
 </mat-card>
