--- a/frontend/src/app/componets/character/character-details/character-details.component.html
+++ b/frontend/src/app/componets/character/character-details/character-details.component.html
@@ -1,1 +1,2 @@
-<p>character-details works!</p>
+<app-form [formItem]="character"></app-form>
+<button class="form-button" mat-raised-button color="primary" (click)="goback()" >Return</button>
