--- a/frontend/src/app/componets/util/table/table.component.css
+++ b/frontend/src/app/componets/util/table/table.component.css
@@ -15,3 +15,15 @@
 .delete {
   color: red;
 }
+
+.mat-select {
+  cursor: pointer;
+  padding-right: 3px;
+  width: 1rem;
+  border: solid thin orangered;
+}
+
+.link-list {
+  text-decoration: none;
+  color: gray;
+}
