--- a/frontend/src/app/componets/util/modal/modal.component.css
+++ b/frontend/src/app/componets/util/modal/modal.component.css
@@ -103,20 +103,21 @@ body {
 
 .btn {
   cursor: pointer;
-  background: #27ae60;
+  background: #ffffff;
   display: inline-block;
   padding: .5em 1em;
-  color: #fff;
-  border-radius: 3px;
+  color: orangered;
+  border-radius: 5px;
+  border: solid thin orangered
 }
 
 .btn:hover,
 .btn:focus {
-  background: #2ecc71;
+  background: #000000;
 }
 
 .btn:active {
-  background: #27ae60;
+  background: #ffffff;
   box-shadow: 0 1px 2px rgba(0,0,0, .2) inset;
 }
 
@@ -140,9 +141,13 @@ p img {
   margin: 0 1em 1em 0;
 }
 
+.box {
+  margin: 5px;
+}
+
 .mat-card {
   margin-top: 15px;
   margin-bottom: 10px;
-  background-color: rgb(0, 0, 77);
+  background-color: rgb(29, 29, 29);
   color: white;
 }
