ajuste no json server

--- a/frontend/src/app/componets/character/character-create/character-create.component.css
+++ b/frontend/src/app/componets/character/character-create/character-create.component.css
@@ -1,8 +1,17 @@
 .form-style {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
 }
 
 .form-button {
   margin: 1rem;
+}
+
+.input-group {
+  display: inline-block;
+  padding: 1rem;
+}
+
+.input-item {
+  width: 15rem;
 }
